src/main/java/fr/dauphine/eu/RulesBuilder/FarmParser.java
package fr.dauphine.eu.RulesBuilder;// Generated from src/main/resources/antlr4/Farm.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FarmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, EQUALS_OPERATOR=4, GREATER_THAN_OPERATOR=5, LESS_THAN_OPERATOR=6, 
		GREATER_THAN_EQUALS_OPERATOR=7, LESS_THAN_EQUALS_OPERATOR=8, NOT_EQUALS_OPERATOR=9, 
		PLUS=10, MINUS=11, DIV=12, MUL=13, MOD=14, DOT=15, SEMICOLON=16, LR_BRACE=17, 
		RR_BRACE=18, LR_BRACKET=19, RR_BRACKET=20, LS_BRACKET=21, RS_BRACKET=22, 
		RULE=23, WHEN=24, THEN=25, AND=26, OR=27, TRUE=28, FALSE=29, NIL_LITERAL=30, 
		NEGATION=31, SALIENCE=32, EQUALS=33, ASSIGN=34, PLUS_ASIGN=35, MINUS_ASIGN=36, 
		DIV_ASIGN=37, MUL_ASIGN=38, GT=39, LT=40, GTE=41, LTE=42, NOTEQUALS=43, 
		BITAND=44, BITOR=45, SIMPLENAME=46, DQUOTA_STRING=47, SQUOTA_STRING=48, 
		DECIMAL_FLOAT_LIT=49, DECIMAL_EXPONENT=50, HEX_FLOAT_LIT=51, HEX_EXPONENT=52, 
		DEC_LIT=53, HEX_LIT=54, OCT_LIT=55, SPACE=56, COMMENT=57, LINE_COMMENT=58;
	public static final int
		RULE_frl = 0, RULE_ruleEntry = 1, RULE_salience = 2, RULE_ruleName = 3, 
		RULE_ruleDescription = 4, RULE_whenScope = 5, RULE_thenScope = 6, RULE_thenExpressionList = 7, 
		RULE_thenExpression = 8, RULE_assignment = 9, RULE_expression = 10, RULE_mulDivOperators = 11, 
		RULE_addMinusOperators = 12, RULE_comparisonOperator = 13, RULE_andLogicOperator = 14, 
		RULE_orLogicOperator = 15, RULE_expressionAtom = 16, RULE_constant = 17, 
		RULE_variable = 18, RULE_arrayMapSelector = 19, RULE_memberVariable = 20, 
		RULE_functionCall = 21, RULE_methodCall = 22, RULE_argumentList = 23, 
		RULE_floatLiteral = 24, RULE_decimalFloatLiteral = 25, RULE_hexadecimalFloatLiteral = 26, 
		RULE_integerLiteral = 27, RULE_decimalLiteral = 28, RULE_hexadecimalLiteral = 29, 
		RULE_octalLiteral = 30, RULE_stringLiteral = 31, RULE_booleanLiteral = 32;
	private static String[] makeRuleNames() {
		return new String[] {
			"frl", "ruleEntry", "salience", "ruleName", "ruleDescription", "whenScope", 
			"thenScope", "thenExpressionList", "thenExpression", "assignment", "expression", 
			"mulDivOperators", "addMinusOperators", "comparisonOperator", "andLogicOperator", 
			"orLogicOperator", "expressionAtom", "constant", "variable", "arrayMapSelector", 
			"memberVariable", "functionCall", "methodCall", "argumentList", "floatLiteral", 
			"decimalFloatLiteral", "hexadecimalFloatLiteral", "integerLiteral", "decimalLiteral", 
			"hexadecimalLiteral", "octalLiteral", "stringLiteral", "booleanLiteral"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'and'", "'or'", "','", "'equals'", "'greater_than'", "'less_than'", 
			"'greater_than_equals'", "'less_than_equals'", "'not_equals'", "'+'", 
			"'-'", "'/'", "'*'", "'%'", "'.'", "';'", "'{'", "'}'", "'('", "')'", 
			"'['", "']'", null, null, null, "'&&'", "'||'", null, null, null, "'!'", 
			null, "'=='", "'='", "'+='", "'-='", "'/='", "'*='", "'>'", "'<'", "'>='", 
			"'<='", "'!='", "'&'", "'|'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, "EQUALS_OPERATOR", "GREATER_THAN_OPERATOR", "LESS_THAN_OPERATOR", 
			"GREATER_THAN_EQUALS_OPERATOR", "LESS_THAN_EQUALS_OPERATOR", "NOT_EQUALS_OPERATOR", 
			"PLUS", "MINUS", "DIV", "MUL", "MOD", "DOT", "SEMICOLON", "LR_BRACE", 
			"RR_BRACE", "LR_BRACKET", "RR_BRACKET", "LS_BRACKET", "RS_BRACKET", "RULE", 
			"WHEN", "THEN", "AND", "OR", "TRUE", "FALSE", "NIL_LITERAL", "NEGATION", 
			"SALIENCE", "EQUALS", "ASSIGN", "PLUS_ASIGN", "MINUS_ASIGN", "DIV_ASIGN", 
			"MUL_ASIGN", "GT", "LT", "GTE", "LTE", "NOTEQUALS", "BITAND", "BITOR", 
			"SIMPLENAME", "DQUOTA_STRING", "SQUOTA_STRING", "DECIMAL_FLOAT_LIT", 
			"DECIMAL_EXPONENT", "HEX_FLOAT_LIT", "HEX_EXPONENT", "DEC_LIT", "HEX_LIT", 
			"OCT_LIT", "SPACE", "COMMENT", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Farm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FarmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FrlContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(FarmParser.EOF, 0); }
		public List<RuleEntryContext> ruleEntry() {
			return getRuleContexts(RuleEntryContext.class);
		}
		public RuleEntryContext ruleEntry(int i) {
			return getRuleContext(RuleEntryContext.class,i);
		}
		public FrlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_frl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FarmListener ) ((FarmListener)listener).enterFrl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FarmListener ) ((FarmListener)listener).exitFrl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FarmVisitor ) return ((FarmVisitor<? extends T>)visitor).visitFrl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FrlContext frl() throws RecognitionException {
		FrlContext _localctx = new FrlContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_frl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==RULE) {
				{
				{
				setState(66);
				ruleEntry();
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(72);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleEntryContext extends ParserRuleContext {
		public TerminalNode RULE() { return getToken(FarmParser.RULE, 0); }
		public RuleNameContext ruleName() {
			return getRuleContext(RuleNameContext.class,0);
		}
		public WhenScopeContext whenScope() {
			return getRuleContext(WhenScopeContext.class,0);
		}
		public ThenScopeContext thenScope() {
			return getRuleContext(ThenScopeContext.class,0);
		}
		public TerminalNode LR_BRACE() { return getToken(FarmParser.LR_BRACE, 0); }
		public TerminalNode RR_BRACE() { return getToken(FarmParser.RR_BRACE, 0); }
		public RuleDescriptionContext ruleDescription() {
			return getRuleContext(RuleDescriptionContext.class,0);
		}
		public SalienceContext salience() {
			return getRuleContext(SalienceContext.class,0);
		}
		public RuleEntryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleEntry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FarmListener ) ((FarmListener)listener).enterRuleEntry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FarmListener ) ((FarmListener)listener).exitRuleEntry(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FarmVisitor ) return ((FarmVisitor<? extends T>)visitor).visitRuleEntry(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RuleEntryContext ruleEntry() throws RecognitionException {
		RuleEntryContext _localctx = new RuleEntryContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_ruleEntry);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(RULE);
			setState(75);
			ruleName();
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DQUOTA_STRING || _la==SQUOTA_STRING) {
				{
				setState(76);
				ruleDescription();
				}
			}

			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SALIENCE) {
				{
				setState(79);
				salience();
				}
			}

			setState(90);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case WHEN:
				{
				setState(82);
				whenScope();
				setState(83);
				thenScope();
				}
				break;
			case LR_BRACE:
				{
				setState(85);
				match(LR_BRACE);
				setState(86);
				whenScope();
				setState(87);
				thenScope();
				setState(88);
				match(RR_BRACE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SalienceContext extends ParserRuleContext {
		public TerminalNode SALIENCE() { return getToken(FarmParser.SALIENCE, 0); }
		public IntegerLiteralContext integerLiteral() {
			return getRuleContext(IntegerLiteralContext.class,0);
		}
		public SalienceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_salience; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FarmListener ) ((FarmListener)listener).enterSalience(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FarmListener ) ((FarmListener)listener).exitSalience(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FarmVisitor ) return ((FarmVisitor<? extends T>)visitor).visitSalience(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SalienceContext salience() throws RecognitionException {
		SalienceContext _localctx = new SalienceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_salience);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(SALIENCE);
			setState(93);
			integerLiteral();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleNameContext extends ParserRuleContext {
		public TerminalNode SIMPLENAME() { return getToken(FarmParser.SIMPLENAME, 0); }
		public StringLiteralContext stringLiteral() {
			return getRuleContext(StringLiteralContext.class,0);
		}
		public RuleNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FarmListener ) ((FarmListener)listener).enterRuleName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FarmListener ) ((FarmListener)listener).exitRuleName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FarmVisitor ) return ((FarmVisitor<? extends T>)visitor).visitRuleName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RuleNameContext ruleName() throws RecognitionException {
		RuleNameContext _localctx = new RuleNameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ruleName);
		try {
			setState(97);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SIMPLENAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				match(SIMPLENAME);
				}
				break;
			case DQUOTA_STRING:
			case SQUOTA_STRING:
				enterOuterAlt(_localctx, 2);
				{
				setState(96);
				stringLiteral();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleDescriptionContext extends ParserRuleContext {
		public TerminalNode DQUOTA_STRING() { return getToken(FarmParser.DQUOTA_STRING, 0); }
		public TerminalNode SQUOTA_STRING() { return getToken(FarmParser.SQUOTA_STRING, 0); }
		public RuleDescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleDescription; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FarmListener ) ((FarmListener)listener).enterRuleDescription(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FarmListener ) ((FarmListener)listener).exitRuleDescription(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FarmVisitor ) return ((FarmVisitor<? extends T>)visitor).visitRuleDescription(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RuleDescriptionContext ruleDescription() throws RecognitionException {
		RuleDescriptionContext _localctx = new RuleDescriptionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ruleDescription);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_la = _input.LA(1);
			if ( !(_la==DQUOTA_STRING || _la==SQUOTA_STRING) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhenScopeContext extends ParserRuleContext {
		public TerminalNode WHEN() { return getToken(FarmParser.WHEN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public WhenScopeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whenScope; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FarmListener ) ((FarmListener)listener).enterWhenScope(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FarmListener ) ((FarmListener)listener).exitWhenScope(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FarmVisitor ) return ((FarmVisitor<? extends T>)visitor).visitWhenScope(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhenScopeContext whenScope() throws RecognitionException {
		WhenScopeContext _localctx = new WhenScopeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_whenScope);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(WHEN);
			setState(102);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ThenScopeContext extends ParserRuleContext {
		public TerminalNode THEN() { return getToken(FarmParser.THEN, 0); }
		public ThenExpressionListContext thenExpressionList() {
			return getRuleContext(ThenExpressionListContext.class,0);
		}
		public ThenScopeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_thenScope; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FarmListener ) ((FarmListener)listener).enterThenScope(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FarmListener ) ((FarmListener)listener).exitThenScope(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FarmVisitor ) return ((FarmVisitor<? extends T>)visitor).visitThenScope(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ThenScopeContext thenScope() throws RecognitionException {
		ThenScopeContext _localctx = new ThenScopeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_thenScope);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(THEN);
			setState(105);
			thenExpressionList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ThenExpressionListContext extends ParserRuleContext {
		public List<ThenExpressionContext> thenExpression() {
			return getRuleContexts(ThenExpressionContext.class);
		}
		public ThenExpressionContext thenExpression(int i) {
			return getRuleContext(ThenExpressionContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(FarmParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(FarmParser.SEMICOLON, i);
		}
		public ThenExpressionListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_thenExpressionList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FarmListener ) ((FarmListener)listener).enterThenExpressionList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FarmListener ) ((FarmListener)listener).exitThenExpressionList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FarmVisitor ) return ((FarmVisitor<? extends T>)visitor).visitThenExpressionList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ThenExpressionListContext thenExpressionList() throws RecognitionException {
		ThenExpressionListContext _localctx = new ThenExpressionListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_thenExpressionList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(107);
				thenExpression();
				setState(108);
				match(SEMICOLON);
				}
				}
				setState(112); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MINUS) | (1L << TRUE) | (1L << FALSE) | (1L << NIL_LITERAL) | (1L << NEGATION) | (1L << SIMPLENAME) | (1L << DQUOTA_STRING) | (1L << SQUOTA_STRING) | (1L << DECIMAL_FLOAT_LIT) | (1L << HEX_FLOAT_LIT) | (1L << DEC_LIT) | (1L << HEX_LIT) | (1L << OCT_LIT))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ThenExpressionContext extends ParserRuleContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public ExpressionAtomContext expressionAtom() {
			return getRuleContext(ExpressionAtomContext.class,0);
		}
		public ThenExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_thenExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FarmListener ) ((FarmListener)listener).enterThenExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FarmListener ) ((FarmListener)listener).exitThenExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FarmVisitor ) return ((FarmVisitor<? extends T>)visitor).visitThenExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ThenExpressionContext thenExpression() throws RecognitionException {
		ThenExpressionContext _localctx = new ThenExpressionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_thenExpression);
		try {
			setState(116);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(114);
				assignment();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				expressionAtom(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(FarmParser.ASSIGN, 0); }
		public TerminalNode PLUS_ASIGN() { return getToken(FarmParser.PLUS_ASIGN, 0); }
		public TerminalNode MINUS_ASIGN() { return getToken(FarmParser.MINUS_ASIGN, 0); }
		public TerminalNode DIV_ASIGN() { return getToken(FarmParser.DIV_ASIGN, 0); }
		public TerminalNode MUL_ASIGN() { return getToken(FarmParser.MUL_ASIGN, 0); }
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FarmListener ) ((FarmListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FarmListener ) ((FarmListener)listener).exitAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FarmVisitor ) return ((FarmVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}
